--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             </thead>
             <tbody></tbody>
           </table>
+          <div id="emptyMessage" class="empty-message">
+            No books available. Please add a book.
+          </div>
         </div>
 
         <dialog id="modal">
